deployment/prod/basic-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkinsx-test-prod
  annotations:
    kubernetes.io/ingress.global-static-ip-name: jenkinsx-test-prod
spec:
  backend:
    serviceName: jenkinsx-test-prod
    servicePort: 8080
