deployment/prod/prod-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: jenkinsx-test-prod
spec:
  backend:
    serviceName: jenkinsx-test-prod
    servicePort: 8080
